projects/qbsf/deployment/sf-qb-integration-final/Salesforce/objects/QB_Integration_Error_Log.object
<CustomObject>
    <description>Log of errors during QuickBooks integration</description>
    <label>QB Integration Error Log</label>
    <nameField>
        <displayFormat>QBERR-{0000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Integration Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Related Opportunity</description>
        <inlineHelpText>The Opportunity related to this error</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>QB Integration Errors</relationshipLabel>
        <relationshipName>QB_Integration_Errors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error message</description>
        <inlineHelpText>Detailed error message</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>Time when the error occurred</description>
        <inlineHelpText>Time when the error occurred</inlineHelpText>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the error has been resolved</description>
        <inlineHelpText>Mark as true when the error has been resolved</inlineHelpText>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    
    <fields>
        <fullName>Resolution_Notes__c</fullName>
        <description>Notes on how the error was resolved</description>
        <inlineHelpText>Notes on how the error was resolved</inlineHelpText>
        <label>Resolution Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>